First Updates to personal info

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Jackson Taylor | Software Engineer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="ncjack, Game Development, esports" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Jackson Taylor | Software Engineer" />
 
     <link
       rel="stylesheet"
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Jackson Taylor</span>
           <br />
-          I'm the Unknown Developer.
+          Here is my Portfolio!
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/wolf.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,18 +79,27 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                I am immensely passionate about video games and 
+                esports and I am highly motivated to work in 
+                the industry. I have a professional background 
+                in a variety of jobs in the esports industry 
+                and will graduate from North Carolina State 
+                University with a Bachelor of Science degree 
+                in computer science. Through my clubs, classes, 
+                and jobs I have acquired skills that have 
+                allowed me to become an accomplished software 
+                engineer, esports professional, and competitive 
+                video game enthusiast.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Here is some more information about a few of my past projects and experiences.
               </p>
               <span class="d-flex mt-3">
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Resume2022.pdf"
                 >
                   View Resume
                 </a>
