--- a/src/index.html
+++ b/src/index.html
@@ -294,19 +294,9 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:jptaylo4@ncsu.edu"
-            >Call to Action</a
+            >Email Me!</a
           >
         </div>
-      </div>
-    </section>
-    <!-- /END Contact Section -->
-
-    <!-- **** Footer Section **** -->
-    <footer class="footer navbar-static-bottom">
-      <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
-          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-        </a>
         <div class="social-links">
           <a rel="noreferrer" href="https://twitter.com/ncjack_" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
@@ -318,6 +308,17 @@
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
+      </div>
+    </section>
+    <!-- /END Contact Section -->
+
+    <!-- **** Footer Section **** -->
+    <footer class="footer navbar-static-bottom">
+      <div class="container">
+        <a rel="noreferrer" href="#top" class="back-to-top">
+          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+        </a>
+        
 
         <hr />
 
