--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,11 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Jackson Taylor</span>
           <br />
-          Here is my Portfolio!
+          Here is some info about me and some games I've made!
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >Dive in!</a
           >
         </p>
       </div>
@@ -99,7 +99,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/Resume2022.pdf"
+                  href="assets/Resume_April_2022.pdf"
                 >
                   View Resume
                 </a>
@@ -116,37 +116,54 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+          <p class="mb-4">Source code available upon request</p>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Brainwave</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Brainwave is a game designed to put you into the mind of a person with multiple sclerosis (literally). You are a worker inside the mind of a person with MS that is assigned to complete simple puzzles. You must complete these tasks in a timed manner while symptoms such as tremors or blindness affect your ability to complete the job. 
+
+                    This game was developed as a group project amongst myself and 3 of my peers and was built in the Unity engine. We created Brainwave in collaboration with the National Multiple Sclerosis Society. It has considerable influence from games such as Keep Talking and Nobody Explodes, Job Simulator, and Please, Don't Touch Anything. 
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Brainwave Image"
+                      class="img-fluid"
+                      src="assets/BW.png"
+                    />
+                  </div>
                 </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Mathlantis: An Mathmatics Rover Game</h3>
+                <div>
+                  <p class="mb-4">
+                    Mathlantis is a rover game where a math problem is offered to the player and they need to solve the problem to move the rover. This game is designed to be an educational supplement for proportional mathematics lessons.
+
+                    Mathlantis was created in conjunction with Corey White and 2 undergraduate peers using the Unity engine. Mr.White is a Ph.D. student at NC State University as well as a middle school math teacher. This game is being used in his thesis to prove that kids can learn math entirely from video games.
+                  </p>
+                </div>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -162,7 +179,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/res.png"
                     />
                   </div>
                 </a>
@@ -175,36 +192,28 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h2 class="project-wrapper__text-title">2D Game Engine!</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    I developed my own 2D game engine in C++. 
+                    I used libraries such as SFML, ZeroMQ, DukTape, etc. to assist my rendering, multithreading, scripting, and networking functionalities.
+
+                    Here are a couple of games I've made using it:
+                  </p>
+                
+                <h3 class="project-wrapper__text-title">Multiplayer Platformer</h3>
+                <div>
+                  <p class="mb-4">
+                    I created a simple 2D platformer using my game engine. This engine has physics such as collision, gravity, momentum, etc. I then built upon the base game to add a lot of interesting features and functionality. Some of the additions I have made include:
+                    - 4 person multiplayer
+                    - Network synchronization
+                    - Multithreading
+                    - Replays
+                    - Scripting
+                    - Event Management System
+                    - Side-scrolling
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
                   <div
                     data-tilt
@@ -216,49 +225,16 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/serverclientslabeled.jpg"
                     />
                   </div>
                 </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Asteroids</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    I created a simple asteroids-style game using my C++ engine. This game has rotational movement, asteroids with random spawning behaviors, a scoring system, and a health system for the player and the asteroids.
                   </p>
                 </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="#!"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
                   <div
                     data-tilt
@@ -270,7 +246,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/asteroids.jpg"
                     />
                   </div>
                 </a>
