--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,9 @@
               </div>
             </div>
           </div>
+          <!-- /END Project -->
 
+          <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
@@ -192,7 +194,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h2 class="project-wrapper__text-title">2D Game Engine!</h3>
+                <h2 class="project-wrapper__text-title">2D Game Engine</h3>
                 <div>
                   <p class="mb-4">
                     I developed my own 2D game engine in C++. 
@@ -200,7 +202,16 @@
 
                     Here are a couple of games I've made using it:
                   </p>
-                
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Multiplayer Platformer</h3>
                 <div>
                   <p class="mb-4">
@@ -214,6 +225,10 @@
                     - Side-scrolling
                   </p>
                 </div>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
                   <div
                     data-tilt
@@ -229,12 +244,24 @@
                     />
                   </div>
                 </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Asteroids</h3>
                 <div>
                   <p class="mb-4">
                     I created a simple asteroids-style game using my C++ engine. This game has rotational movement, asteroids with random spawning behaviors, a scoring system, and a health system for the player and the asteroids.
                   </p>
                 </div>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
                 <a rel="noreferrer" href="#!" target="_blank">
                   <div
                     data-tilt
