--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
                 <div>
                   <p class="mb-4">
                     Brainwave is a game designed to put you into the mind of a person with multiple sclerosis (literally). You are a worker inside the mind of a person with MS that is assigned to complete simple puzzles. You must complete these tasks in a timed manner while symptoms such as tremors or blindness affect your ability to complete the job. 
-
+                    <br><br>
                     This game was developed as a group project amongst myself and 3 of my peers and was built in the Unity engine. We created Brainwave in collaboration with the National Multiple Sclerosis Society. It has considerable influence from games such as Keep Talking and Nobody Explodes, Job Simulator, and Please, Don't Touch Anything. 
                   </p>
                 </div>
@@ -161,8 +161,8 @@
                 <h3 class="project-wrapper__text-title">Mathlantis: An Mathmatics Rover Game</h3>
                 <div>
                   <p class="mb-4">
-                    Mathlantis is a rover game where a math problem is offered to the player and they need to solve the problem to move the rover. This game is designed to be an educational supplement for proportional mathematics lessons.
-
+                    Mathlantis is a rover game where a math problem is offered to the player and they need to solve the problem to move the rover. This game is designed to be an educational supplement for proportional mathematics lessons.<br>
+                    <br>
                     Mathlantis was created in conjunction with Corey White and 2 undergraduate peers using the Unity engine. Mr.White is a Ph.D. student at NC State University as well as a middle school math teacher. This game is being used in his thesis to prove that kids can learn math entirely from video games.
                   </p>
                 </div>
@@ -197,9 +197,9 @@
                 <h2 class="project-wrapper__text-title">2D Game Engine</h3>
                 <div>
                   <p class="mb-4">
-                    I developed my own 2D game engine in C++. 
-                    I used libraries such as SFML, ZeroMQ, DukTape, etc. to assist my rendering, multithreading, scripting, and networking functionalities.
-
+                    I developed my own 2D game engine in C++. <br>
+                    I used libraries such as SFML, ZeroMQ, DukTape, etc. to assist my rendering, multithreading, scripting, and networking functionalities.<br>
+                    <br>
                     Here are a couple of games I've made using it:
                   </p>
                 </div>
@@ -215,13 +215,13 @@
                 <h3 class="project-wrapper__text-title">Multiplayer Platformer</h3>
                 <div>
                   <p class="mb-4">
-                    I created a simple 2D platformer using my game engine. This engine has physics such as collision, gravity, momentum, etc. I then built upon the base game to add a lot of interesting features and functionality. Some of the additions I have made include:
-                    - 4 person multiplayer
-                    - Network synchronization
-                    - Multithreading
-                    - Replays
-                    - Scripting
-                    - Event Management System
+                    I created a simple 2D platformer using my game engine. This engine has physics such as collision, gravity, momentum, etc. I then built upon the base game to add a lot of interesting features and functionality. Some of the additions I have made include:<br>
+                    - 4 person multiplayer<br>
+                    - Network synchronization<br>
+                    - Multithreading<br>
+                    - Replays<br>
+                    - Scripting<br>
+                    - Event Management System<br>
                     - Side-scrolling
                   </p>
                 </div>
