--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,11 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Jackson Taylor</span>
           <br />
-          Here is some info about me and some games I've made!
+          Come look at my games!
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Dive in!</a
+            >Learn More About Me!</a
           >
         </p>
       </div>
